# ChangeLog for media-video/kmediafactory
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> ChangeLog:
  Added metadata.xml.

*kmediafactory-0.7.5 (21 Dec 2009)

  21 Dec 2009; Michał Ziąbkowski <mziab@o2.pl>
  +kmediafactory-0.7.5.ebuild:
  Bumped.

  12 May 2009; Michał Ziąbkowski <mziab@o2.pl>
  -files/kmediafactory-qt45.patch, -kmediafactory-0.7.0_rc3.ebuild,
  -kmediafactory-0.7.0_rc3-r1.ebuild, -kmediafactory-0.7.1.ebuild,
  +kmediafactory-0.7.2.ebuild:
  Bumped. Removed cruft.

  24 Apr 2009; Michał Ziąbkowski <mziab@o2.pl>
  +kmediafactory-0.7.1.ebuild:
  Bumped.

  23 Feb 2009; Michał Ziąbkowski <mziab@o2.pl>
  +files/kmediafactory-qt45.patch, +kmediafactory-0.7.0_rc3-r1.ebuild:
  Fixed built with Qt 4.5.

  20 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
  +kmediafactory-0.7.0_rc3.ebuild:
  New ebuild.
