@@ -1,6 +1,6 @@
 DIST kmediafactory-0.7.2.tar.bz2 777054 RMD160 d0d6a1dbdc0621c6c8bb3b2b0d06ef774146c81e SHA1 e4c8883e93070a28564bfdd77c7ed45ba55a0a31 SHA256 a23b2a067695f10b1e0cbf6fcf4ec1927ed175cbe30c9a4631265f98a58f2659
 DIST kmediafactory-0.7.5.tar.bz2 785907 RMD160 b01e0b03ad985b8645a33f2fe1015dc5bd9810ec SHA1 bb59b8e3cbea4cfafcea4702aaf1b8913e095664 SHA256 3fa968c1be9e17e4698e006c030840d7d08e870c1fac230388febe88ec72fbe5
-EBUILD kmediafactory-0.7.2.ebuild 885 RMD160 aa94da237bdd2243eb4dc6cec9c5e00e95b83195 SHA1 410f274e1c27dc490c5dbb2d65c206ab24b2c080 SHA256 a269b9fbbc32f58bd821469e918c9271f84b5ffbed354cbb68363fcf581ded4f
-EBUILD kmediafactory-0.7.5.ebuild 885 RMD160 aa94da237bdd2243eb4dc6cec9c5e00e95b83195 SHA1 410f274e1c27dc490c5dbb2d65c206ab24b2c080 SHA256 a269b9fbbc32f58bd821469e918c9271f84b5ffbed354cbb68363fcf581ded4f
-MISC ChangeLog 915 RMD160 6d4cf7b31f43fe8b7eb1d60f3d0fa09f57c5cb58 SHA1 524ead7bc3b32aed9d5385a952ef92e2f6c2e269 SHA256 ccfa12fdd682bc147fc70040f8bdb58e2ab5d537b2f651d96fb89b8a1dab71c4
+EBUILD kmediafactory-0.7.2.ebuild 895 RMD160 c345c7a25a5c69183d4c9b9bc834d63e03ee56dd SHA1 4e876f307b3df195448dd48f7c1435751d4bf2c0 SHA256 c07049a863a435ca4eaf0d5200e99221b11da1d8513e701d8a84b0840939c0ba
+EBUILD kmediafactory-0.7.5.ebuild 895 RMD160 c345c7a25a5c69183d4c9b9bc834d63e03ee56dd SHA1 4e876f307b3df195448dd48f7c1435751d4bf2c0 SHA256 c07049a863a435ca4eaf0d5200e99221b11da1d8513e701d8a84b0840939c0ba
+MISC ChangeLog 1087 RMD160 4863323db20dea28a487ab4d81ccf747840fb325 SHA1 bbf68aeaee0a0f2df66f28ba43d3e5196daaeb31 SHA256 0a752711445ed3b5b2ef877fd0bdeb27e0f23924493159635815e3766ef67dd0
 MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
